--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 <body>
 
 <ul>
-  <li><a href="index.html">Inicio</a></li>
+  <li><a href="https://angelgil2.github.io">Inicio</a></li>
   <li><a class="active" href="login.html">Iniciar Session</a></li>
   <li><a href="contacto.html">Contacto</a></li>
   <li><a href="acerca.html">Acerca de</a></li>
